(fix) ScrollBar bug fix and some preformance increase. (#51)
* Perf Check

* Jerk Motion Hack

* Hopefully Bug Fix

* Added Prefetch

* AOS removed

* Events page typo fix

* Bump up svelte and sapper versions

* Remove Fonts

* Remove Fonts

--- a/static/global.css
+++ b/static/global.css
@@ -1,7 +1,5 @@
 body {
   margin: 0;
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, Merriweather, Segoe UI,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 14px;
   line-height: 1.5;
   color: #fff;
@@ -28,7 +26,7 @@ a {
 }
 
 code {
-  font-family: menlo, inconsolata, monospace;
+  /* font-family: menlo, inconsolata, monospace; */
   font-size: calc(1em - 2px);
   color: #555;
   background-color: #f0f0f0;
